--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,8 +1,11 @@
 <h1> Places I've Been </h1>
 
 <ul>
-@places
-
+  <% for place in @places %>
+    <li>
+      <a href="/places/<%= place["id"] %>"> <%= place["name"] %>
+    </li>
+  <% end %>
 </ul>
 
 <p>
