--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,15 @@
 <h1>New Post</h1>
 
 <%= form_with :model => @post do |form| %>
-  <p>
-    <%= form.label "title", "Title" %>
-    <%= form.text_field "title" %>
-  </p>
-  <p>
-    <%= form.label "long description", "Long Description" %>
-    <%= form.text_field "long description" %>
-  <p>
-    <%= form.label "date", "Date" %>
-    <%= form.date_field "date" %>
-  </p>
+<%= form.label :title, "Title" %>
+<%= form.text_field :title %>
+
+<%= form.label :description, "Description" %>
+<%= form.text_area :description %>
+
+<%= form.label :posted_on, "Date" %>
+<%= form.date_field :posted_on %>
+
 
     <%= form.hidden_field "place_id" %>
   
