--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,8 @@
-<h1><%= @post["title"] %> </h1>
+<h1><%= @post.title %> </h1>
 
-<p><a href="/places/<%= @place["id"] %>">Back to <%= @place["name"] %></a></p>
+<ul>
+  <li><%= @post.posted_on %></li>
+  <li><%= @post.description %></li>
+</ul>
+
+<p><a href="/places/<%= @place.id %>">Back to <%= @place.name %></a></p>
