--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -17,3 +17,6 @@
 <p>
   <a href="/places">Back to All Places</a>
 </p>
+
+<p><%= button_to "Delete this company", @company, :method => "delete" %></p>
+  
